# on-chain-claim-testing

./: Cargo.toml  generate_blocks.py  test_scenarios.md
interactor/: Cargo.toml  state.toml
interactor/src/: interactor_main.rs  proxy.rs
scenarios/: trace10.json  trace11.json  trace12.json  trace9.json
src/: contract.rs  events.rs
tests/: on_chain_claim_blackbox_test.rs  scenario_go_test.rs
